tests/ui/malformed/malformed-special-attrs.stderr
error: malformed `cfg_attr` attribute input
  --> $DIR/malformed-special-attrs.rs:1:1
   |
LL | #[cfg_attr]
   | ^^^^^^^^^^^
   |
   = note: for more information, visit <https://doc.rust-lang.org/reference/conditional-compilation.html#the-cfg_attr-attribute>
help: missing condition and attribute
   |
LL | #[cfg_attr(condition, attribute, other_attribute, ...)]
   |           ++++++++++++++++++++++++++++++++++++++++++++

error: malformed `cfg_attr` attribute input
  --> $DIR/malformed-special-attrs.rs:4:1
   |
LL | #[cfg_attr = ""]
   | ^^^^^^^^^^^^^^^^
   |
   = note: for more information, visit <https://doc.rust-lang.org/reference/conditional-compilation.html#the-cfg_attr-attribute>
help: missing condition and attribute
   |
LL - #[cfg_attr = ""]
LL + #[cfg_attr(condition, attribute, other_attribute, ...)]
   |

error: malformed `derive` attribute input
  --> $DIR/malformed-special-attrs.rs:7:1
   |
LL | #[derive]
   | ^^^^^^^^^ help: must be of the form: `#[derive(Trait1, Trait2, ...)]`

error: malformed `derive` attribute input
  --> $DIR/malformed-special-attrs.rs:10:1
   |
LL | #[derive = ""]
   | ^^^^^^^^^^^^^^ help: must be of the form: `#[derive(Trait1, Trait2, ...)]`

error: aborting due to 4 previous errors

